--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -10,35 +11,49 @@
     tools:context=".Fragments.ProfileFragment">
 
     <TextView
-        android:layout_marginTop="40dp"
-        android:gravity="center_horizontal"
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textSize="17sp"
         android:textColor="@color/colorPrimaryDark"
-        />
+        android:layout_marginTop="40dp" />
 
     <TextView
-        android:gravity="center_horizontal"
         android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textColor="#000"
         android:textSize="15sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_below="@id/name"/>
 
     <Button
-        android:layout_gravity="center_horizontal"
         android:id="@+id/logoutBtn"
-        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="30dp"
+        android:background="@android:color/holo_orange_light"
         android:text="Log Out"
         android:textAllCaps="false"
         android:textColor="#fff"
         android:textSize="16sp"
-        android:background="@color/colorPrimaryDark"
-        />
+        android:layout_below="@id/email" />
 
-</LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/windowBackground"
+        app:menu="@menu/bottom_navigation_menu" />
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomNavigationView"
+        android:layout_below="@id/email"/>
+
+</RelativeLayout>
