--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".Activity.MainActivity">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="#fff"
-        android:padding="5dp"
-        android:background="@color/colorPrimary"
-        android:textSize="22sp"
-        tools:ignore="MissingConstraints" />
-
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="699dp"
+        android:layout_width="406dp"
+        android:layout_height="770dp"
         tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="5dp"
         tools:layout_editor_absoluteY="32dp">
+
+        <!-- Add this BottomNavigationView -->
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@color/design_default_color_background"
+            app:itemTextColor="#FEFEFE"
+            app:menu="@menu/bottom_navigation_menu" />
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
