--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,9 @@
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_width="406dp"
-        android:layout_height="770dp"
+        android:layout_width="match_parent"
+        android:layout_height="699dp"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="5dp"
         tools:layout_editor_absoluteY="32dp">
 
         <!-- Add this BottomNavigationView -->
