--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -10,15 +11,13 @@
     android:layout_marginTop="10dp"
     tools:context=".Fragments.ProfileFragment">
 
-    <!-- Move the TextViews to the center of the screen -->
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="17sp"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_centerInParent="true"/>
+        android:textSize="17sp" />
 
     <TextView
         android:id="@+id/email"
@@ -29,27 +28,36 @@
         android:textSize="15sp"
         android:layout_below="@id/name"/>
 
+    <!-- Set layout_below to reference the email TextView -->
     <Spinner
         android:id="@+id/accountSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/email"
         android:layout_marginTop="16dp"/>
 
-
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+    <TableLayout
+        android:id="@+id/tableLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_navigation_menu" />
+        android:layout_below="@id/accountSpinner"
+        android:layout_marginTop="16dp">
 
-    <FrameLayout
-        android:id="@+id/profile_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/bottomNavigationView"
-        android:layout_below="@id/email"/>
+</TableLayout>
+
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottomNavigationView"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_alignParentBottom="true"
+android:background="?android:attr/windowBackground"
+app:menu="@menu/bottom_navigation_menu" />
+
+<FrameLayout
+android:id="@+id/profile_fragment_container"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:layout_above="@id/bottomNavigationView"
+android:layout_below="@id/email"/>
 
 </RelativeLayout>
