--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,6 +8,18 @@
     android:layout_margin="15dp"
     android:orientation="vertical">
 
+
+    <ImageView
+        android:id="@+id/cogIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentEnd="false"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:clickable="true"
+        android:src="@drawable/baseline_settings_24" />
+
     <TextView
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
