--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -8,17 +8,8 @@
     <FrameLayout
         android:id="@+id/transferContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/comingSoonText"/>
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/comingSoonText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Coming Soon"
-        android:textSize="24sp"
-        android:textColor="@android:color/black"/>
 </RelativeLayout>
 
 
